--- a/public/css/css.css
+++ b/public/css/css.css
@@ -64,6 +64,12 @@ footer a{
 footer a:hover{
   color: silver;
 }
+.card{
+  margin-left: -15px;
+  margin-right: -15px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
 @media(min-width: 1280px){
   #navigation{
       background: #2e3063;
@@ -85,6 +91,9 @@ footer a:hover{
       border-bottom: 1px solid white;
       line-height: 2em;
   }
+  /* #content3{
+    margin-top: 30px;
+  } */
 }
 @media(min-width: 992px){
 
